<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo" >

    <TextView
        android:id="@+id/textMostrarCatastrofe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMostrarCatastrofe" />

    <EditText
        android:id="@+id/idCatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/idCatText" />

    <EditText
        android:id="@+id/descripcionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcionText" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPedidoDeAyuda"
        android:text="@string/pedidoAyuda_Button"
         />

</LinearLayout>

