<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo5" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/textView1"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="230dp"
        android:layout_height="2dp"
        android:layout_marginLeft="45dp"
        android:layout_weight="1.89"
        android:src="@drawable/logo2sacc" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/textView2"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    
        <Button
            android:id="@+id/btnMostrarPersona"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#5858FA"
            android:onClick="onBotonInicial"
            android:text="@string/btnMostrarPersona"
            android:textColor="#fff" />

</LinearLayout>
